<resources>
    <string name="app_name">RSS FEED VIEWER</string>
    <string name="element_text">TEST THIS SI A BIG TITLE FOR A RSS ITEM ADD SOME MORE WORDS</string>
    <string name="element_description">TEST_DESCRITPION asdalskjd lkasjdlka jslkdaj lasdklaj sdljas dlkajsd lkasjd lkasj dlkajskd lajslkd  WE NEED MORE WORDS TO DESCRIBE THE NEWS , SHOUTOUT TO TECHCRUNCH</string>
    <string name="element_date">04 May 2020</string>
    <string name="site_name">techcrunch.com</string>
    <string name="refresh">Refresh</string>
    <string name="users">Users</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_sites_settings">SitesSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="site_techcrunch">TechCrunch</string>
    <string name="site_wired">Wired</string>
    <string name="site_nytimes">NYTimes</string>
    <string name="site_macworld">MacWorld</string>
    <string name="site_pcworld">PCWorld</string>
    <string name="site_techworld">TechWorld</string>
    <string name="lifehacker">LifeHacker</string>
    <string name="site_computerworld">ComputerWorld</string>
    <string name="site_wsj">Wall Street Journal</string>
    <string name="site_bbc">BBC</string>
    <string name="site_euronews">Euronews</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ask_for_username">Input username</string>
    <string name="username">Username</string>
</resources>