<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/list_item_height"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textSize="20sp"
                android:id="@+id/rssItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/element_text">

            </TextView>

            <TextView
                android:id="@+id/rssItemDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/element_description">

            </TextView>

            <TextView
                android:id="@+id/rssItemDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/element_date">

            </TextView>


        </LinearLayout>







</FrameLayout>
